Update swagger.
