# docs/apigw/swagger.json
@@ -7,6 +7,85 @@
     },
     "basePath": "/api/v1",
     "paths": {
+        "/consent": {
+            "post": {
+                "description": "Add consent endpoint",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "dc4eu"
+                ],
+                "summary": "AddConsent",
+                "operationId": "add-consent",
+                "parameters": [
+                    {
+                        "description": " ",
+                        "name": "req",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/apiv1.AddConsentRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/helpers.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/consent/get": {
+            "post": {
+                "description": "Get consent endpoint",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "dc4eu"
+                ],
+                "summary": "GetConsent",
+                "operationId": "get-consent",
+                "parameters": [
+                    {
+                        "description": " ",
+                        "name": "req",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/apiv1.GetConsentRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "schema": {
+                            "$ref": "#/definitions/model.Consent"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/helpers.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/credential": {
             "post": {
                 "description": "Create credential endpoint",
@@ -36,7 +115,7 @@
                     "200": {
                         "description": "Success",
                         "schema": {
-                            "$ref": "#/definitions/apiv1.CredentialReply"
+                            "$ref": "#/definitions/apiv1_issuer.MakeSDJWTReply"
                         }
                     },
                     "400": {
@@ -127,7 +206,7 @@
         },
         "/document/collect_id": {
             "post": {
-                "description": "Get document by collect code endpoint",
+                "description": "Get one document with collect id",
                 "consumes": [
                     "application/json"
                 ],
@@ -168,7 +247,7 @@
         },
         "/document/identity": {
             "put": {
-                "description": "Adding identity to document endpoint",
+                "description": "Adding array of identities to one document",
                 "consumes": [
                     "application/json"
                 ],
@@ -240,6 +319,47 @@
                 }
             }
         },
+        "/document/list": {
+            "post": {
+                "description": "List documents for an identity",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "dc4eu"
+                ],
+                "summary": "DocumentList",
+                "operationId": "document-list",
+                "parameters": [
+                    {
+                        "description": " ",
+                        "name": "req",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/apiv1.DocumentListRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "schema": {
+                            "$ref": "#/definitions/apiv1.DocumentListReply"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/helpers.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/document/revoke": {
             "post": {
                 "description": "Revoke one document",
@@ -278,9 +398,9 @@
                 }
             }
         },
-        "/id_mapping": {
+        "/identity/mapping": {
             "post": {
-                "description": "ID mapping endpoint",
+                "description": "Identity mapping endpoint",
                 "consumes": [
                     "application/json"
                 ],
@@ -290,8 +410,8 @@
                 "tags": [
                     "dc4eu"
                 ],
-                "summary": "IDMapping",
-                "operationId": "id-mapping",
+                "summary": "IdentityMapping",
+                "operationId": "identity-mapping",
                 "parameters": [
                     {
                         "description": " ",
@@ -299,7 +419,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.MetaData"
+                            "$ref": "#/definitions/apiv1.IdentityMappingRequest"
                         }
                     }
                 ],
@@ -307,7 +427,7 @@
                     "200": {
                         "description": "Success",
                         "schema": {
-                            "$ref": "#/definitions/apiv1.IDMappingReply"
+                            "$ref": "#/definitions/apiv1.IdentityMappingReply"
                         }
                     },
                     "400": {
@@ -349,47 +469,6 @@
                         "description": "Success",
                         "schema": {
                             "$ref": "#/definitions/apiv1.NotificationReply"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/helpers.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/portal": {
-            "post": {
-                "description": "Get portal data endpoint",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "dc4eu"
-                ],
-                "summary": "Portal",
-                "operationId": "portal",
-                "parameters": [
-                    {
-                        "description": " ",
-                        "name": "req",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/apiv1.PortalRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Success",
-                        "schema": {
-                            "$ref": "#/definitions/apiv1.PortalReply"
                         }
                     },
                     "400": {
@@ -482,6 +561,27 @@
         }
     },
     "definitions": {
+        "apiv1.AddConsentRequest": {
+            "type": "object",
+            "required": [
+                "authentic_source",
+                "authentic_source_person_id"
+            ],
+            "properties": {
+                "authentic_source": {
+                    "type": "string"
+                },
+                "authentic_source_person_id": {
+                    "type": "string"
+                },
+                "consent_to": {
+                    "type": "string"
+                },
+                "session_id": {
+                    "type": "string"
+                }
+            }
+        },
         "apiv1.AddDocumentIdentityRequest": {
             "type": "object",
             "properties": {
@@ -497,16 +597,11 @@
                     "description": "required: true\nexample: PDA1",
                     "type": "string"
                 },
-                "identity": {
-                    "$ref": "#/definitions/model.Identity"
-                }
-            }
-        },
-        "apiv1.CredentialReply": {
-            "type": "object",
-            "properties": {
-                "sdjwt": {
-                    "type": "string"
+                "identities": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.Identity"
+                    }
                 }
             }
         },
@@ -514,6 +609,7 @@
             "type": "object",
             "required": [
                 "authentic_source",
+                "collect_id",
                 "credential_type",
                 "document_id",
                 "document_type",
@@ -521,6 +617,9 @@
             ],
             "properties": {
                 "authentic_source": {
+                    "type": "string"
+                },
+                "collect_id": {
                     "type": "string"
                 },
                 "credential_type": {
@@ -570,6 +669,55 @@
                 },
                 "document_id": {
                     "description": "required: true\nexample: 5e7a981c-c03f-11ee-b116-9b12c59362b9",
+                    "type": "string"
+                }
+            }
+        },
+        "apiv1.DocumentListReply": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.DocumentList"
+                    }
+                }
+            }
+        },
+        "apiv1.DocumentListRequest": {
+            "type": "object",
+            "required": [
+                "identity"
+            ],
+            "properties": {
+                "authentic_source": {
+                    "type": "string"
+                },
+                "document_type": {
+                    "type": "string"
+                },
+                "identity": {
+                    "$ref": "#/definitions/model.Identity"
+                },
+                "valid_from": {
+                    "type": "integer"
+                },
+                "valid_to": {
+                    "type": "integer"
+                }
+            }
+        },
+        "apiv1.GetConsentRequest": {
+            "type": "object",
+            "required": [
+                "authentic_source",
+                "authentic_source_person_id"
+            ],
+            "properties": {
+                "authentic_source": {
+                    "type": "string"
+                },
+                "authentic_source_person_id": {
                     "type": "string"
                 }
             }
@@ -632,11 +780,26 @@
                 }
             }
         },
-        "apiv1.IDMappingReply": {
+        "apiv1.IdentityMappingReply": {
             "type": "object",
             "properties": {
                 "data": {
                     "$ref": "#/definitions/model.IDMapping"
+                }
+            }
+        },
+        "apiv1.IdentityMappingRequest": {
+            "type": "object",
+            "required": [
+                "identity"
+            ],
+            "properties": {
+                "authentic_source": {
+                    "description": "required: true\nexample: SUNET",
+                    "type": "string"
+                },
+                "identity": {
+                    "$ref": "#/definitions/model.Identity"
                 }
             }
         },
@@ -659,41 +822,6 @@
                 },
                 "document_type": {
                     "type": "string"
-                }
-            }
-        },
-        "apiv1.PortalReply": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/model.UploadDocument"
-                    }
-                }
-            }
-        },
-        "apiv1.PortalRequest": {
-            "type": "object",
-            "required": [
-                "authentic_source",
-                "authentic_source_person_id"
-            ],
-            "properties": {
-                "authentic_source": {
-                    "type": "string"
-                },
-                "authentic_source_person_id": {
-                    "type": "string"
-                },
-                "document_type": {
-                    "type": "string"
-                },
-                "valid_from": {
-                    "type": "integer"
-                },
-                "valid_to": {
-                    "type": "integer"
                 }
             }
         },
@@ -750,8 +878,9 @@
             "type": "object",
             "required": [
                 "document_data",
+                "document_data_version",
                 "document_display",
-                "identity",
+                "identities",
                 "meta"
             ],
             "properties": {
@@ -759,14 +888,34 @@
                     "type": "object",
                     "additionalProperties": {}
                 },
+                "document_data_version": {
+                    "type": "string"
+                },
                 "document_display": {
                     "$ref": "#/definitions/model.DocumentDisplay"
                 },
-                "identity": {
-                    "$ref": "#/definitions/model.Identity"
+                "identities": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.Identity"
+                    }
                 },
                 "meta": {
                     "$ref": "#/definitions/model.MetaData"
+                }
+            }
+        },
+        "apiv1_issuer.MakeSDJWTReply": {
+            "type": "object",
+            "properties": {
+                "Disclosures": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "JWT": {
+                    "type": "string"
                 }
             }
         },
@@ -797,6 +946,28 @@
                 "valid_until": {
                     "description": "required: false\nexample: 509567558",
                     "type": "integer"
+                }
+            }
+        },
+        "model.Consent": {
+            "type": "object",
+            "required": [
+                "consent_to",
+                "created_at",
+                "session_id"
+            ],
+            "properties": {
+                "consent_to": {
+                    "description": "required: true\nexample: \"Using my data for research\"",
+                    "type": "string"
+                },
+                "created_at": {
+                    "description": "required: true\nexample: 509567558",
+                    "type": "integer"
+                },
+                "session_id": {
+                    "description": "required: true\nexample: \"sess-123\"",
+                    "type": "string"
                 }
             }
         },
@@ -836,6 +1007,24 @@
                 }
             }
         },
+        "model.DocumentList": {
+            "type": "object",
+            "required": [
+                "document_display",
+                "meta"
+            ],
+            "properties": {
+                "document_display": {
+                    "$ref": "#/definitions/model.DocumentDisplay"
+                },
+                "meta": {
+                    "$ref": "#/definitions/model.MetaData"
+                },
+                "qr": {
+                    "$ref": "#/definitions/model.QR"
+                }
+            }
+        },
         "model.IDMapping": {
             "type": "object",
             "properties": {
@@ -847,10 +1036,6 @@
         "model.Identity": {
             "type": "object",
             "required": [
-                "authentic_source_person_id",
-                "birth_date",
-                "family_name",
-                "given_name",
                 "schema"
             ],
             "properties": {
@@ -1048,11 +1233,6 @@
         },
         "model.RevocationReference": {
             "type": "object",
-            "required": [
-                "authentic_source",
-                "document_id",
-                "document_type"
-            ],
             "properties": {
                 "authentic_source": {
                     "type": "string"
@@ -1061,43 +1241,7 @@
                     "type": "string"
                 },
                 "document_type": {
-                    "type": "string",
-                    "enum": [
-                        "PDA1",
-                        "EHIC"
-                    ]
-                }
-            }
-        },
-        "model.UploadDocument": {
-            "type": "object",
-            "required": [
-                "document_data",
-                "document_data_version",
-                "document_display",
-                "identity",
-                "meta"
-            ],
-            "properties": {
-                "document_data": {
-                    "type": "object",
-                    "additionalProperties": {}
-                },
-                "document_data_version": {
-                    "description": "required: true\nexample: \"1.0.0\"",
                     "type": "string"
-                },
-                "document_display": {
-                    "$ref": "#/definitions/model.DocumentDisplay"
-                },
-                "identity": {
-                    "$ref": "#/definitions/model.Identity"
-                },
-                "meta": {
-                    "$ref": "#/definitions/model.MetaData"
-                },
-                "qr": {
-                    "$ref": "#/definitions/model.QR"
                 }
             }
         }
