# internal/apigw/httpserver/endpoints.go
@@ -142,16 +142,16 @@ func (s *Service) endpointGetDocumentCollectID(ctx context.Context, c *gin.Conte
 	return reply, nil
 }
 
-func (s *Service) endpointIDMapping(ctx context.Context, c *gin.Context) (any, error) {
-	ctx, span := s.tp.Start(ctx, "httpserver:endpointIDMapping")
+func (s *Service) endpointIdentityMapping(ctx context.Context, c *gin.Context) (any, error) {
+	ctx, span := s.tp.Start(ctx, "httpserver:endpointIdentityMapping")
 	defer span.End()
 
-	request := &apiv1.IDMappingRequest{}
+	request := &apiv1.IdentityMappingRequest{}
 	if err := s.bindRequest(ctx, c, request); err != nil {
 		span.SetStatus(codes.Error, err.Error())
 		return nil, err
 	}
-	reply, err := s.apiv1.IDMapping(ctx, request)
+	reply, err := s.apiv1.IdentityMapping(ctx, request)
 	if err != nil {
 		span.SetStatus(codes.Error, err.Error())
 		return nil, err
